searchincludedir=$(includedir)/analysis
searchinclude_HEADERS=Analyzer.h \
					  GBK_T2GBK_SFilter.h \
					  LowerCaseFilter.h \
					  MetaCharTokenizer.h \
					  StringUtility.h \
					  Tokenizer.h \
				   	  UpperCaseFilter.h \
					  BasisDef.h \
			  		  GBK_T2GBK_S.h \
			   		  MemHeap.h \
					  NormalizeFilter.h \
				   	  TokenFilter.h \
				   	  TokenStream.h \
					  CommonAlgorithm.h \
					  HashMap.h \
		   			  MetaCharAnalyzer.h \
					  StopFilter.h \
			  		  Token.h \
					  UnityFilter.h \
					  SpecialWordItem.h \
					  InnerWordItem.h \
					  charset_func.h \
		 			$(NULL)
