AM_LDFLAGS=-static-libtool-libs
lib_LTLIBRARIES=libanalysis.la
libanalysis_la_SOURCES=LowerCaseFilter.cpp \
														 UpperCaseFilter.cpp \
														 StopFilter.cpp \
														 NormalizeFilter.cpp \
														 GBK_T2GBK_SFilter.cpp \
														 HashMap.cpp \
														 MetaCharAnalyzer.cpp \
														 MetaCharTokenizer.cpp \
														 StringUtility.cpp \
														 UnityFilter.cpp \
														 SpecialWordItem.cpp \
														 InnerWordItem.cpp \
														 MemHeap.c \
														 charset_func.c
							
